--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
