--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,8 @@ uvicorn
 python-multipart
 Pillow
 supervision==0.15.0
+torch
+torchvision
+torchaudio
+git+https://github.com/IDEA-Research/GroundingDINO.git
+git+https://github.com/facebookresearch/segment-anything.git
