--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,8 @@ fastapi
 uvicorn
 python-multipart
 Pillow
-supervision==0.15.0
 torch
 torchvision
 torchaudio
-git+https://github.com/IDEA-Research/GroundingDINO.git
+groundingdino-py
 git+https://github.com/facebookresearch/segment-anything.git
