--- a/dokcer-compose.yml
+++ b/dokcer-compose.yml
@@ -1,17 +1,20 @@
-version: '3.8'
+version: "3.8"
 
 services:
   backend:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     runtime: nvidia
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      - PYTHONUNBUFFERED=1
     ports:
       - "8000:8000"
     volumes:
+      - ./backend:/app
       - ./weights:/app/weights:ro
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     deploy:
       resources:
         reservations:
@@ -22,9 +25,14 @@ services:
 
   frontend:
     build:
-      context: .
-      dockerfile: frontend/Dockerfile
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+    environment:
+      - NODE_ENV=development
+    command: npm run dev -- --host
     depends_on:
       - backend
